--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -1,88 +1,104 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Day 5 Cheat Sheet — Raw to Reset</title>
-<style>
-  :root{
-    --brand:#FC8B73; --ink:#0D0D0E; --card:#FFFFFF; --muted:#666;
-    --soft:#FFF7F4; --line:#ffd7cc; --radius:18px;
-  }
-  html,body{margin:0;padding:0;background:#F7F7F7;color:var(--ink);
-    font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
-  .wrap{max-width:900px;margin:28px auto 64px;padding:0 18px}
-  .brand{display:flex;justify-content:center;align-items:center;margin-bottom:12px}
-  .brand img{width:clamp(88px,9vw,140px);height:auto;display:block;
-    filter:drop-shadow(0 4px 14px rgba(0,0,0,.08))}
-  header{background:var(--brand);color:#fff;border-radius:var(--radius);padding:22px;
-    text-align:center;box-shadow:0 10px 30px rgba(0,0,0,.10)}
-  header h1{margin:0;font-size:clamp(22px,4.2vw,36px);line-height:1.15}
-  .sub{opacity:.95;margin-top:6px}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="color-scheme" content="light dark">
+  <title>Day 5 Cheat Sheet — Raw to Reset</title>
 
-.hero {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 8px auto 32px;
-  max-width: 900px;       /* same as text width */
-  aspect-ratio: 16 / 9;   /* shallow, cinematic feel */
-  overflow: hidden;
-  border-radius: 20px;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.08);
-}
+  <style>
+    /* ---------- Global Rhythm + Dark Mode ---------- */
+    :root {
+      --brand:#FC8B73; --ink:#0D0D0E; --card:#FFFFFF; --muted:#666;
+      --soft:#FFF7F4; --line:#ffd7cc; --radius:18px;
+    }
 
-.hero img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: transform 0.35s ease, box-shadow 0.35s ease;
-}
+    html, body {
+      margin:0; padding:0;
+      background:#F7F7F7; color:var(--ink);
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+    }
 
-.hero img:hover {
-  transform: scale(1.02);
-  box-shadow: 0 10px 26px rgba(0,0,0,.08);
-}
+    p, h1, h2, h3 { line-height:1.55; }
 
+    @media only screen and (max-width:600px) {
+      div[style*="padding:24px"], div[style*="padding:20px"], div[style*="padding:28px"] {
+        padding-left:18px !important; padding-right:18px !important;
+      }
+    }
 
-  .card{background:var(--card);border-radius:var(--radius);padding:18px;margin-top:16px;
-    box-shadow:0 8px 22px rgba(0,0,0,.06);border:1px solid var(--line)}
-  .card h2{margin:0 0 10px;font-size:1.2rem;display:flex;gap:.5rem;align-items:center}
-  .tone{background:var(--soft);border-left:6px solid var(--brand)}
-  ul{margin:8px 0 0 20px} li{margin:.3rem 0}
+    @media (prefers-color-scheme:dark) {
+      body, table, td, p, h1, h2, h3 {
+        color:#ffffff !important;
+        background-color:#0D0D0E !important;
+      }
+    }
 
-  .why, .card em.why {
-    display:block;
-    color:#6b2f23;
-    opacity:0.85;
-    font-size:0.92rem;
-    margin-top:4px;
-    font-style:italic;
-  }
+    /* ---------- Layout & Brand ---------- */
+    .wrap{max-width:900px;margin:28px auto 64px;padding:0 18px;}
+    .brand{display:flex;justify-content:center;align-items:center;margin-bottom:12px;}
+    .brand img{width:clamp(88px,9vw,140px);height:auto;display:block;
+      filter:drop-shadow(0 4px 14px rgba(0,0,0,.08));}
 
-  .cta-row{display:flex;flex-wrap:wrap;gap:12px;justify-content:center;margin-top:18px}
-  .btn{display:inline-block;background:var(--brand);color:#fff;text-decoration:none;
-    padding:12px 18px;border-radius:999px;font-weight:700;cursor:pointer}
-  .btn.secondary{background:#2D2D2D}
-  .btn.ghost{background:#fff;color:var(--brand);border:2px solid var(--brand)}
-  .btn.locked{background:#fce3dd;color:#888;border-color:#f7b4a3;cursor:not-allowed}
-  .btn.locked:hover{background:#fce3dd;color:#888}
+    /* ---------- Header ---------- */
+    header {
+      background: var(--brand);
+      color:#fff; border-radius:var(--radius);
+      padding:26px 20px 28px; text-align:center;
+      box-shadow:0 8px 24px rgba(0,0,0,.08);
+      margin-bottom:28px;
+    }
+    header h1{
+      margin:0; font-size:clamp(22px, 4.2vw, 36px);
+      line-height:1.15; font-weight:700;
+    }
+    .sub{opacity:.95;margin-top:6px;font-size:1.05rem;font-weight:500;}
 
-  footer{text-align:center;font-size:1.1rem;color:#0D0D0E;margin-top:48px;margin-bottom:60px;
-    font-weight:600;line-height:1.7;animation:slideUpFade 1.4s ease-out 0.3s forwards;opacity:0;}
-  footer strong{color:#FC8B73;}
-  footer:hover{color:#FC8B73;transform:translateY(-2px);transition:all 0.3s ease;}
-  @keyframes slideUpFade {0%{opacity:0;transform:translateY(30px);}100%{opacity:1;transform:translateY(0);}}
+    /* ---------- Hero ---------- */
+    .hero{display:flex;justify-content:center;align-items:center;
+      margin:16px auto 32px;max-width:900px;aspect-ratio:16/9;overflow:hidden;
+      border-radius:20px;box-shadow:0 8px 16px rgba(0,0,0,0.08);}
+    .hero img{width:100%;height:100%;object-fit:cover;
+      transition:transform .35s ease,box-shadow .35s ease;}
+    .hero img:hover{transform:scale(1.02);box-shadow:0 10px 26px rgba(0,0,0,.08);}
 
-  @media print {
-    @page {size:A4;margin:18mm;}
-    .cta-row, .muted, .brand img {display:none !important;}
-    section.card{box-shadow:none !important;border:1px solid #e8e8e8 !important;border-radius:8px !important;}
-    header{background:#fff !important;color:#000 !important;border:1px solid #e8e8e8 !important;}
-    a{color:#000 !important;text-decoration:underline !important;}
-    html,body{background:#fff !important;}
-  }
-</style>
+    /* ---------- Cards ---------- */
+    .card{background:var(--card);border-radius:var(--radius);padding:18px;margin-top:16px;
+      box-shadow:0 8px 22px rgba(0,0,0,.06);border:1px solid var(--line);}
+    .card h2{margin:0 0 10px;font-size:1.2rem;display:flex;gap:.5rem;align-items:center;}
+    .tone{background:var(--soft);border-left:6px solid var(--brand);}
+    ul{margin:8px 0 0 20px;}li{margin:.25rem 0;}
+    .why,.card em.why{display:block;color:#6b2f23;opacity:.85;font-size:.92rem;
+      margin-top:4px;font-style:italic;}
+
+    /* ---------- Buttons ---------- */
+    .cta-row{display:flex;flex-wrap:wrap;gap:12px;justify-content:center;margin-top:22px;}
+    .btn{display:inline-block;background:var(--brand);color:#fff;text-decoration:none;
+      padding:12px 22px;border-radius:999px;font-weight:700;cursor:pointer;
+      transition:all .25s ease;}
+    .btn:hover{transform:translateY(-1px);opacity:.9;}
+    .btn.ghost{background:#fff;color:var(--brand);border:2px solid var(--brand);}
+    .btn.locked{background:#fce3dd;color:#888;border-color:#f7b4a3;cursor:not-allowed;}
+    .btn.locked:hover{background:#fce3dd;color:#888;}
+
+    /* ---------- Footer ---------- */
+    footer{text-align:center;font-size:1.05rem;color:#0D0D0E;margin-top:48px;margin-bottom:60px;
+      font-weight:600;line-height:1.7;animation:slideUpFade 1.4s ease-out .3s forwards;opacity:0;}
+    footer strong{color:#FC8B73;}
+    footer:hover{color:#FC8B73;transform:translateY(-2px);transition:all .3s ease;}
+    @keyframes slideUpFade{0%{opacity:0;transform:translateY(30px);}100%{opacity:1;transform:translateY(0);}}
+
+    /* ---------- Print ---------- */
+    @media print{
+      @page{size:A4;margin:18mm;}
+      .cta-row,.brand img{display:none!important;}
+      section.card{box-shadow:none!important;border:1px solid #e8e8e8!important;border-radius:8px!important;}
+      header{background:#fff!important;color:#000!important;border:1px solid #e8e8e8!important;}
+      a{color:#000!important;text-decoration:underline!important;}
+      html,body{background:#fff!important;}
+        
+ 
+  </style>
 </head>
 <body>
   <div class="wrap">
