Meta dark mode patch

--- a/day2/day2-journal.html
+++ b/day2/day2-journal.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<!-- 🌓 Dark mode safety -->
+<meta name="color-scheme" content="light dark">
+<meta name="supported-color-schemes" content="light dark">
 <title>Day 2 Journal — Raw to Reset</title>
 <style>
   :root{--brand:#FC8B73;--ink:#0D0D0E;--card:#fff;--soft:#FFF7F4;--line:#ffd7cc;--radius:18px;}
