--- a/day3/day3-journal.html
+++ b/day3/day3-journal.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<!-- 🌓 Dark mode safety -->
+<meta name="color-scheme" content="light dark">
+<meta name="supported-color-schemes" content="light dark">
 <title>Day 3 Journal — Raw to Reset</title>
 <style>
   :root{
