--- a/day4/day4-journal.html
+++ b/day4/day4-journal.html
@@ -10,7 +10,7 @@
 <style>
   :root{
     --brand:#FC8B73; --ink:#0D0D0E; --card:#FFFFFF;
-    --muted:#666; --soft:#FFF7F4; --line:#ffd7cc; --radius:18px;
+    --soft:#FFF7F4; --line:#ffd7cc; --radius:18px;
   }
   html,body{
     margin:0;padding:0;background:#F7F7F7;color:var(--ink);
