--- a/day2/day2-recipe.html
+++ b/day2/day2-recipe.html
@@ -3,11 +3,13 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="color-scheme" content="light dark">
+<meta name="supported-color-schemes" content="light dark">
 <title>Day 2 Recipe — Evening Wind-Down Bowl</title>
 <style>
   :root{
     --brand:#FC8B73; --ink:#0D0D0E; --card:#FFFFFF;
-    --muted:#666; --soft:#FFF7F4; --line:#ffd7cc; --radius:18px;
+    --soft:#FFF7F4; --line:#ffd7cc; --radius:18px;
   }
 
   html,body{
@@ -29,7 +31,7 @@
   .brand img:hover{transform:scale(1.04);}
 
   header{
-    background:linear-gradient(165deg,#FD8369 0%,#FEB299 100%);
+    background: var(--brand);
     color:#fff;border-radius:var(--radius);
     padding:26px 20px 28px;text-align:center;
     box-shadow:0 8px 24px rgba(0,0,0,.08);
@@ -101,6 +103,30 @@
     a{color:#000!important;text-decoration:underline!important;}
     html,body{background:#fff!important;}
   }
+  @media (prefers-color-scheme: dark) {
+  html, body {
+    background: #F7F7F7 !important;
+    color: var(--ink) !important;
+  }
+  header {
+    background: var(--brand) !important;
+    color: #fff !important;
+  }
+  section.card, .card, footer {
+    background: #FFFFFF !important;
+    color: var(--ink) !important;
+  }
+  .btn, .btn.primary {
+    background: var(--brand) !important;
+    color: #fff !important;
+  }
+  .btn.ghost {
+    background: #fff !important;
+    color: var(--brand) !important;
+    border-color: var(--brand) !important;
+  }
+}
+
 </style>
 </head>
 
