--- a/day4/day4-recipe.html
+++ b/day4/day4-recipe.html
@@ -3,11 +3,13 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="color-scheme" content="light dark">
+<meta name="supported-color-schemes" content="light dark">
 <title>Day 4 Recipe — Creamy Red Lentil Soup</title>
 <style>
   :root {
     --brand:#FC8B73; --ink:#0D0D0E; --card:#FFFFFF;
-    --muted:#666; --soft:#FFF7F4; --line:#ffd7cc; --radius:18px;
+    --soft:#FFF7F4; --line:#ffd7cc; --radius:18px;
   }
   html,body {
     margin:0; padding:0; background:#F7F7F7; color:var(--ink);
@@ -64,6 +66,30 @@
     0%{opacity:0;transform:translateY(30px);}
     100%{opacity:1;transform:translateY(0);}
   }
+  @media (prefers-color-scheme: dark) {
+  html, body {
+    background: #F7F7F7 !important;
+    color: var(--ink) !important;
+  }
+  header {
+    background: var(--brand) !important;
+    color: #fff !important;
+  }
+  section.card, .card, footer {
+    background: #FFFFFF !important;
+    color: var(--ink) !important;
+  }
+  .btn, .btn.primary {
+    background: var(--brand) !important;
+    color: #fff !important;
+  }
+  .btn.ghost {
+    background: #fff !important;
+    color: var(--brand) !important;
+    border-color: var(--brand) !important;
+  }
+}
+
 </style>
 </head>
 
