--- a/day1/day1-video.html
+++ b/day1/day1-video.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="color-scheme" content="light dark">
+<meta name="supported-color-schemes" content="light dark">
   <title>Raw to Reset — Day 1</title>
   <meta name="description" content="Day 1 of your 5-Day Raw to Reset." />
   <style>
