--- a/day1/day1-video.html
+++ b/day1/day1-video.html
@@ -8,6 +8,7 @@
   <title>Raw to Reset — Day 1</title>
   <meta name="description" content="Day 1 of your 5-Day Raw to Reset." />
   <style>
+    :root{--brand:#FC8B73;--ink:#0D0D0E;}
     body {
       font-family: system-ui, sans-serif;
       background: #F7F7F7;
