--- a/day3/day3-video.html
+++ b/day3/day3-video.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Day 3 of your 5-Day Raw to Reset — stay in rhythm." />
   <link rel="preload" as="image" href="../assets/portrait1.jpg">
   <style>
+    :root{--brand:#FC8B73;--ink:#0D0D0E;}
     body {
       font-family: system-ui, sans-serif;
       background: #F7F7F7;
@@ -22,7 +23,7 @@
       padding: 16px;
     }
     header {
-      background: #FC8B73;
+      background:var(--brand);
       padding: 18px;
       border-radius: 18px;
       text-align: center;
