--- a/day4/day4-video.html
+++ b/day4/day4-video.html
@@ -8,6 +8,7 @@
   <title>Raw to Reset — Day 4</title>
   <meta name="description" content="Day 4 of your 5-Day Raw to Reset." />
   <style>
+    :root{--brand:#FC8B73;--ink:#0D0D0E;}
     body {
       font-family: system-ui, sans-serif;
       background: #F7F7F7;
@@ -17,7 +18,7 @@
     }
     .wrap { max-width: 900px; margin: auto; padding: 16px; }
     header {
-      background: #FC8B73;
+      background:var(--brand);
       padding: 18px;
       border-radius: 18px;
       text-align: center;
