--- a/day1/day1-video.html
+++ b/day1/day1-video.html
@@ -18,7 +18,7 @@
     }
     .wrap { max-width: 900px; margin: auto; padding: 16px; }
     header {
-      background: #FC8B73;
+      background:var(--brand);
       padding: 18px;
       border-radius: 18px;
       text-align: center;
