--- a/blueprint/blueprint.html
+++ b/blueprint/blueprint.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="color-scheme" content="light dark" />
 <meta name="supported-color-schemes" content="light dark" />
-<title>Raw to Reset Blueprint — Artificial Momentum</title>
+<title>Diana Air Blueprint — Artificial Momentum</title>
 <style>
   :root {
     --brand:#FC8B73; --ink:#0D0D0E; --card:#FFF; --soft:#FFF7F4;
@@ -65,7 +65,7 @@
 
   <header>
     <img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum logo">
-    <h1>Raw to Reset — The Blueprint</h1>
+    <h1>Diana Air — The Blueprint</h1>
     <p>Where rhythm meets intelligence — blending AI precision and human intuition to help women reset, rebuild, and rise in sync with their biology.</p>
   </header>
 
@@ -95,7 +95,7 @@
   <section class="cta">
     <h3>Join the Beta</h3>
     <p>Be part of the first rhythm-based reset for women.</p>
-    <a href="https://raw.artificialmomentum.com/signup.html">Join the Waitlist</a>
+    <a href="https://blueprint.artificialmomentum.com/signup.html">Join the Waitlist</a>
   </section>
 
   <footer>© Artificial Momentum · Diana Air Coaching × ECHO</footer>
