Logo and email update

--- a/Raw to Reset Thank you/index.html
+++ b/Raw to Reset Thank you/index.html
@@ -60,7 +60,7 @@
         💌 Your welcome email and access instructions will land in your inbox
         soon.<br /><br />
         If you have questions, reach out to
-        <a href="mailto:rawtoresetcoaching@artificialmomentum.com">
+        <a href="raw@artificialmomentum.com">
           rawtoresetcoaching@artificialmomentum.com</a
         >
         <br /><br />
