image title update

--- a/Raw to Reset Thank you/index.html
+++ b/Raw to Reset Thank you/index.html
@@ -49,7 +49,7 @@
   <body>
     <div class="container">
       <img
-        src="./stripe_payment_thank_you_page_without_text.jpg"
+        src="three-women.jpg"
         alt="Raw to Reset Thank You"
         class="hero"
       />
@@ -61,7 +61,7 @@
         soon.<br /><br />
         If you have questions, reach out to
         <a href="raw@artificialmomentum.com">
-          rawtoresetcoaching@artificialmomentum.com</a
+          raw@artificialmomentum.com</a
         >
         <br /><br />
         Let’s reset. I’ve got you.<br />
