image path edit

--- a/blueprint/blueprint.html
+++ b/blueprint/blueprint.html
@@ -173,7 +173,7 @@
   </header>
 
   <div class="hero fade-in">
-    <img src="Assets/hero-image.jpg" alt="Women enjoying an autumn garden gathering">
+    <img src="Raw to Reset for Netlify/Assets/blueprint-hero-image.jpg" alt="Women enjoying an autumn garden gathering">
   </div>
 
   <section class="flow fade-in">
@@ -196,7 +196,7 @@
   </section>
 
   <section class="secondary fade-in">
-    <img src="Assets/mother-five-girls.jpg" alt="Mother cooking with daughters in a warm kitchen">
+    <img src="Raw to Reset for Netlify/Assets/mother-five-girls.jpg" alt="Mother cooking with daughters in a warm kitchen">
   </section>
 
   <section class="cta fade-in">
