Dark mode patch

--- a/index.html
+++ b/index.html
@@ -53,6 +53,27 @@
 @media (max-width:540px){
   .mini-intro .row{align-items:center}
 }
+@media (prefers-color-scheme: dark) {
+  body {
+    background: #0d0d0e;
+    color: #f6f6f6;
+  }
+  h1, h2, .highlight, .truth-bomb, .cta {
+    color: #ffb0a2 !important;
+  }
+  .cta {
+    background: #d45d5d;
+  }
+  .proof, .mini-intro, footer {
+    background: #1a1a1a;
+    border-color: #444;
+    color: #eaeaea;
+  }
+  .portrait-wrapper img {
+    background: #222;
+  }
+}
+
 
   </style>
 </head>
