--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Color scheme + theme support -->
+<meta name="color-scheme" content="light dark">
+<meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
+<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#0d0d0e">
+<meta name="background-color" content="#ffffff">
+
   <title>Raw to Reset — Cycle Clarity Coaching</title>
   <style>
     body{font-family:'Helvetica Neue',Arial,sans-serif;margin:0;background:#fff;color:#222}
