dark mode patch

--- a/day1/day1-journal.html
+++ b/day1/day1-journal.html
@@ -66,6 +66,21 @@
     border-color: var(--brand) !important;
   }
 }
+@media (prefers-color-scheme: dark) {
+  html, body {
+    background-color: #FFF !important;
+    color: #0D0D0E !important;
+  }
+  .card, .container, .wrap, div {
+    background-color: #FFF !important;
+    color: #0D0D0E !important;
+  }
+  input, textarea {
+    background-color: #FFF !important;
+    color: #0D0D0E !important;
+  }
+}
+
 
 </style>
 </head>
