--- a/day1/day1-cheatsheet.html
+++ b/day1/day1-cheatsheet.html
@@ -98,6 +98,21 @@
       header{background:#fff!important;color:#000!important;border:1px solid #e8e8e8!important;}
       a{color:#000!important;text-decoration:underline!important;}
       html,body{background:#fff!important;}
+      @media (prefers-color-scheme: dark) {
+  html, body {
+    background-color: #FFF !important;
+    color: #0D0D0E !important;
+  }
+  .card, .container, .wrap, div {
+    background-color: #FFF !important;
+    color: #0D0D0E !important;
+  }
+  input, textarea {
+    background-color: #FFF !important;
+    color: #0D0D0E !important;
+  }
+}
+
         
  
   </style>
