--- a/day1/day1-cheatsheet.html
+++ b/day1/day1-cheatsheet.html
@@ -99,6 +99,7 @@
       a{color:#000!important;text-decoration:underline!important;}
       html,body{background:#fff!important;}
       @media (prefers-color-scheme: dark) {
+  @media (prefers-color-scheme: dark) {
   html, body {
     background-color: #FFF !important;
     color: #0D0D0E !important;
@@ -112,6 +113,7 @@
     color: #0D0D0E !important;
   }
 }
+
 
         
  
