--- a/day3/day3-journal.html
+++ b/day3/day3-journal.html
@@ -65,6 +65,20 @@
     color: var(--brand) !important;
     border-color: var(--brand) !important;
   }
+  @media (prefers-color-scheme: dark) {
+  html, body {
+    background-color: #FFF !important;
+    color: #0D0D0E !important;
+  }
+  .card, .container, .wrap, div {
+    background-color: #FFF !important;
+    color: #0D0D0E !important;
+  }
+  input, textarea {
+    background-color: #FFF !important;
+    color: #0D0D0E !important;
+  }
+}
 }
 
 </style>
