After submission, redirect the user to thank-you.html.

--- a/day1/day1-journal.html
+++ b/day1/day1-journal.html
@@ -93,7 +93,7 @@
   </section>
 
   <!-- Journal Form -->
-  <form name="day1-journal" method="POST" data-netlify="true">
+    <form name="day1-journal" method="POST" data-netlify="true" action="/thank-you.html">
     <input type="hidden" name="form-name" value="day1-journal" />
     <input type="hidden" name="page" value="Day 1 Journal" />
 
