logo and email edit

--- a/Raw to Reset Thank you/index.html
+++ b/Raw to Reset Thank you/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <div class="brand"><img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum logo"></div> style="display: block; margin: 20px auto; max-width: 200px;">
-
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>You're In — Raw to Reset</title>
     <style>
       body {
+        <div class="wrap">
+      <div class="brand"><img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum logo"></div>
         margin: 0;
         font-family: system-ui, sans-serif;
         background-color: #ffffff;
@@ -60,8 +61,8 @@
         💌 Your welcome email and access instructions will land in your inbox
         soon.<br /><br />
         If you have questions, reach out to
-        <a href="raw@artificialmomentum.com">
-          raw@artificialmomentum.com</a
+        <a href="rtr@artificialmomentum.com">
+          rtr@artificialmomentum.com</a
         >
         <br /><br />
         Let’s reset. I’ve got you.<br />
