--- a/Raw to Reset Thank you/index.html
+++ b/Raw to Reset Thank you/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <div class="wrap">
-      <div class="brand"><img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum logo"></div>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>You're In — Raw to Reset</title>
     <style>
+      :root {
+        --brand: #FC8B73;
+        --ink: #0D0D0E;
+      }
+
       body {
-        
         margin: 0;
-        font-family: system-ui, sans-serif;
-        background-color: #ffffff;
-        color: #222;
+        font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+        background-color: #fff;
+        color: var(--ink);
         text-align: center;
         display: flex;
         flex-direction: column;
@@ -20,40 +22,72 @@
         justify-content: center;
         padding: 2rem;
       }
-      .container {
-        max-width: 800px;
+
+      .wrap {
+        max-width: 900px;
         width: 100%;
       }
+
+      .brand {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 1.5rem;
+      }
+
+      .brand img {
+        width: clamp(100px, 10vw, 180px);
+        height: auto;
+        display: block;
+        filter: drop-shadow(0 4px 14px rgba(0, 0, 0, 0.08));
+      }
+
       img.hero {
         width: 100%;
-        max-height: 500px;
+        max-height: 480px;
         object-fit: cover;
-        border-radius: 16px;
+        border-radius: 18px;
+        box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
       }
+
       .message {
         margin-top: 2rem;
-        font-size: 1.25rem;
+        font-size: 1.15rem;
         line-height: 1.6;
       }
+
       .message strong {
         font-size: 1.5rem;
         display: block;
         margin-bottom: 1rem;
+        color: var(--brand);
       }
+
       .footer {
         margin-top: 3rem;
         font-size: 1rem;
         color: #666;
       }
+
+      a {
+        color: var(--brand);
+        text-decoration: none;
+        font-weight: 600;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
     </style>
   </head>
   <body>
-    <div class="container">
-      <img
-        src="three-women.jpg"
-        alt="Raw to Reset Thank You"
-        class="hero"
-      />
+    <div class="wrap">
+      <div class="brand">
+        <img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum logo" />
+      </div>
+
+      <img src="three-women.jpg" alt="Raw to Reset Thank You" class="hero" />
+
       <div class="message">
         <strong>🌟🎉 You're in!</strong>
         You’ve just claimed your founding seat in <strong>Raw to Reset</strong> — a
@@ -61,16 +95,15 @@
         💌 Your welcome email and access instructions will land in your inbox
         soon.<br /><br />
         If you have questions, reach out to
-        <a href="rtr@artificialmomentum.com">
-          rtr@artificialmomentum.com</a
-        >
-        <br /><br />
+        <a href="mailto:rtr@artificialmomentum.com">rtr@artificialmomentum.com</a>.<br /><br />
         Let’s reset. I’ve got you.<br />
         — Diana x
       </div>
+
       <div class="footer">
         © 2025 Artificial Momentum. All rights reserved.
       </div>
     </div>
   </body>
 </html>
+
