--- a/Raw to Reset Thank you/index.html
+++ b/Raw to Reset Thank you/index.html
@@ -95,7 +95,7 @@
         💌 Your welcome email and access instructions will land in your inbox
         soon.<br /><br />
         If you have questions, reach out to
-        <a href="mailto:connect@artificialmomentum.com">connect@artificialmomentum.com</a>.<br /><br />
+        <a href="mailto:rtr@artificialmomentum.com">rtr@artificialmomentum.com</a>.<br /><br />
 
         Let’s reset. I’ve got you.<br />
         — Diana x
