analytics tag added

--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@ img.loaded {
   })(window, document, 'script', 'https://cdn.sender.net/accounts_resources/universal.js', 'sender');
   sender('5200e1d77e6017')
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S0F060FJQJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-S0F060FJQJ');
+</script>
+
 </head>
 <body>
   <div class="container">
