--- a/thankyou/youre-in.html
+++ b/thankyou/youre-in.html
@@ -79,6 +79,15 @@
         text-decoration: underline;
       }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S0F060FJQJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-S0F060FJQJ');
+</script>
+
   </head>
   <body>
     <div class="wrap">
