--- a/nov-23.html
+++ b/nov-23.html
@@ -112,7 +112,7 @@
     <p>Your 5-day <strong>Raw to Reset</strong> journey starts on <strong>Sunday, November 23</strong>.</p>
     <p>You’ll get your first video, cheat sheet, recipe, and journal page straight to your inbox that morning.</p>
 
-    <p>Until then, make sure your emails from <strong>connect@artificialmomentum.com</strong> are marked safe — you won’t want to miss Day 1!</p>
+    <p>Until then, make sure your emails from <strong>rtr@artificialmomentum.com</strong> are marked safe — you won’t want to miss Day 1!</p>
 
     <a href="mailto:rtr@artificialmomentum.com" class="button">Ask a Question</a>
 
